projects/chloria-minio/base/ocean/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chloria-console
spec:
  parentRefs:
    - name: global
      namespace: core-global
  hostnames:
    - PLACEHOLDER # Ref: `../../overlays/${environment}/httproute_patch.yaml` file
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: chloria-console
          port: 9090
